[package]
name = "core0"
version = "0.1.0"
authors = ["Rincewound <aaaargh@minddebugger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
cortex-m = "0.7.1"
heapless = "0.6.1"
rand_core = "0.6.0"
