[package]
name = "win"
version = "0.1.0"
authors = ["Rincewound <aaaargh@minddebugger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core1={ path="../core1" }


[dependencies.sdl2]
version = "0.34"
features = ["unsafe_textures"]

[profile.dev]
opt-level = 3